--- a/scss/custom.css
+++ b/scss/custom.css
@@ -1,10 +1,20 @@
+/* pagination - Gallery */
+@import url("https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap");
+.mb-6 {
+  margin-bottom: 5rem;
+}
+
+.mt-6 {
+  margin-top: 5rem;
+}
+
+/* map - About Us */
 /*!
  * Bootstrap v5.0.0-beta1 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-@import url("https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap");
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -5071,7 +5081,7 @@ fieldset:disabled .btn {
 .page-link {
   position: relative;
   display: block;
-  color: #0d6efd;
+  color: black;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -5090,14 +5100,14 @@ fieldset:disabled .btn {
 
 .page-link:hover {
   z-index: 2;
-  color: #0a58ca;
-  background-color: #e9ecef;
-  border-color: #dee2e6;
+  color: white;
+  background-color: #80888f;
+  border-color: #80888f;
 }
 
 .page-link:focus {
   z-index: 3;
-  color: #0a58ca;
+  color: #80888f;
   background-color: #e9ecef;
   outline: 0;
   -webkit-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
@@ -5110,15 +5120,15 @@ fieldset:disabled .btn {
 
 .page-item.active .page-link {
   z-index: 3;
-  color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  color: white;
+  background-color: #80888f;
+  border-color: #80888f;
 }
 
 .page-item.disabled .page-link {
-  color: #6c757d;
+  color: #80888f;
   pointer-events: none;
-  background-color: #fff;
+  background-color: #80888f;
   border-color: #dee2e6;
 }
 
@@ -11591,7 +11601,7 @@ fieldset:disabled .btn {
   }
 }
 
-/* general header / footer */
+/* general header and footer */
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
